# small-sql

./: .gitignore  CMakeLists.txt  LICENSE  README.md  small-sql.drawio
db/: example.db  example_copy.db
include/: Column.hpp  Comand.hpp  Command.hpp  DataBaseException.hpp  Database.hpp  Expression.hpp  Field.hpp  Filter.hpp  Helpers.hpp  Lexer.hpp  Parser.hpp  Table.hpp
src/: Column.cpp  Database.cpp  Expression.cpp  Filter.cpp  Helpers.cpp  Lexer.cpp  Parser.cpp  Table.cpp
tests/: main.cpp  tests.cpp
